# operai

./: .gitignore  Cargo.toml  INTEGRATIONS.md  LICENSE  README.md  TESTING.md  buf.gen.yaml  clippy.toml  rustfmt.toml
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: cargo-publish.yml  ci.yml  release-please.yml
crates/cargo-operai/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/cargo-operai/src/: commands.rs  config.rs  embedding.rs  main.rs
crates/cargo-operai/src/commands/: build.rs  call.rs  describe.rs  embed.rs  list.rs  mcp.rs  mod.rs  new.rs  serve.rs
crates/operai/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/operai-abi/: Cargo.toml  README.md
crates/operai-abi/src/: lib.rs
crates/operai-build/: CHANGELOG.md  Cargo.toml  README.md
crates/operai-build/src/: lib.rs
crates/operai-core/: CHANGELOG.md  Cargo.toml  README.md
crates/operai-core/src/: config.rs  lib.rs  loader.rs  manifest.rs  policy.rs  registry.rs  tool.rs
crates/operai-core/src/policy/: session.rs
crates/operai-embedding/: Cargo.toml
crates/operai-embedding/src/: config.rs  embedding.rs  lib.rs
crates/operai-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/operai-macro/src/: lib.rs
crates/operai-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/operai-runtime/src/: bench_helpers.rs  builder.rs  lib.rs  runtime.rs  search.rs  service.rs  transports.rs
crates/operai-runtime/src/service/: toolbox.rs
crates/operai-runtime/src/transports/: grpc.rs  mcp.rs  mod.rs
crates/operai-runtime/src/transports/grpc/: mod.rs  toolbox.rs
crates/operai/src/: context.rs  credential.rs  entrypoint.rs  lib.rs
docs/: authentication.md
examples/: README_TEMPLATE.md
examples/calendars-scheduling/cal-com/: Cargo.toml  README.md
examples/calendars-scheduling/cal-com/src/: lib.rs  types.rs
examples/calendars-scheduling/calendly/: Cargo.toml  README.md
examples/calendars-scheduling/calendly/src/: lib.rs
examples/calendars-scheduling/doodle/: Cargo.toml  README.md
examples/calendars-scheduling/doodle/src/: lib.rs  types.rs
examples/calendars-scheduling/google-calendar/: Cargo.toml  README.md
examples/calendars-scheduling/google-calendar/src/: lib.rs
examples/calendars-scheduling/outlook-calendar/: Cargo.toml  README.md
examples/calendars-scheduling/outlook-calendar/src/: lib.rs  types.rs
examples/cicd/buildkite/: Cargo.toml  README.md
examples/cicd/circleci/: Cargo.toml  README.md
examples/cicd/github-actions/: Cargo.toml  README.md
examples/cicd/gitlab-ci/: Cargo.toml  README.md
examples/cicd/gitlab-ci/src/: lib.rs  types.rs
examples/cicd/jenkins/: Cargo.toml  README.md
examples/docs-notes/confluence/: Cargo.toml  README.md
examples/docs-notes/dropbox-paper/: Cargo.toml  README.md
examples/docs-notes/dropbox-paper/src/: lib.rs  types.rs
examples/docs-notes/evernote/: Cargo.toml  README.md
examples/docs-notes/google-docs/: Cargo.toml  README.md
examples/docs-notes/guru/: Cargo.toml  README.md
examples/docs-notes/microsoft-word-online/: Cargo.toml  README.md
examples/docs-notes/notion/: Cargo.toml  README.md
examples/docs-notes/onenote/: Cargo.toml  README.md
examples/docs-notes/slab/: Cargo.toml  README.md
examples/email-inbox/fastmail/: Cargo.toml  README.md
examples/email-inbox/gmail/: Cargo.toml  README.md
examples/email-inbox/imap-smtp/: Cargo.toml  README.md
examples/email-inbox/imap-smtp/src/: lib.rs
examples/email-inbox/proton-mail/: Cargo.toml  README.md
examples/file-storage/box/: Cargo.toml  README.md
examples/file-storage/dropbox/: Cargo.toml  README.md
examples/file-storage/google-drive/: Cargo.toml  README.md
examples/file-storage/onedrive/: Cargo.toml  README.md
examples/file-storage/sharepoint/: Cargo.toml  README.md
examples/file-storage/sharepoint/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/meetings-calling/aircall/: Cargo.toml  README.md
examples/meetings-calling/dialpad/: Cargo.toml  README.md
examples/meetings-calling/microsoft-teams-meetings/: Cargo.toml  README.md
examples/meetings-calling/webex/: Cargo.toml  README.md
examples/meetings-calling/zoom/: Cargo.toml  README.md
examples/project-tasks/asana/: Cargo.toml  README.md
examples/project-tasks/clickup/: Cargo.toml  README.md
examples/project-tasks/jira/: Cargo.toml  README.md
examples/project-tasks/jira-service-management/: Cargo.toml  README.md
examples/project-tasks/linear/: Cargo.toml  README.md
examples/project-tasks/microsoft-to-do/: Cargo.toml  README.md
examples/project-tasks/monday-com/: Cargo.toml  README.md
examples/project-tasks/todoist/: Cargo.toml  README.md
examples/project-tasks/trello/: Cargo.toml  README.md
examples/project-tasks/trello/src/: lib.rs  types.rs
examples/source-control/azure-repos/: Cargo.toml  README.md
examples/source-control/bitbucket/: Cargo.toml  README.md
examples/source-control/gerrit/: Cargo.toml  README.md
examples/source-control/gitea/: Cargo.toml  README.md
examples/source-control/github/: Cargo.toml  README.md
examples/source-control/gitlab/: Cargo.toml  README.md
examples/spreadsheets/airtable/: Cargo.toml  README.md
examples/spreadsheets/coda/: Cargo.toml  README.md
examples/spreadsheets/coda/src/: lib.rs  types.rs
examples/spreadsheets/excel-online/: Cargo.toml  README.md
examples/spreadsheets/google-sheets/: Cargo.toml  README.md
examples/spreadsheets/smartsheet/: Cargo.toml  README.md
examples/team-chat/discord/: Cargo.toml  README.md
examples/team-chat/discord/src/: lib.rs  types.rs
examples/team-chat/google-chat/: Cargo.toml  README.md
examples/team-chat/google-chat/src/: lib.rs  types.rs
examples/team-chat/mattermost/: Cargo.toml  README.md
examples/team-chat/mattermost/src/: lib.rs  types.rs
examples/team-chat/microsoft-teams/: Cargo.toml  README.md
examples/team-chat/rocket-chat/: Cargo.toml  README.md
examples/team-chat/slack/: Cargo.toml  README.md
examples/team-chat/zulip/: Cargo.toml  README.md
(+92 files in other folders)
