[package]
name = "cargo-operai"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Cargo subcommand for Operai SDK development"

[[bin]]
name = "cargo-operai"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Embeddings
async-openai = { workspace = true }
fastembed = { workspace = true }

# Utilities
walkdir = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }

# Server
operai-runtime = { workspace = true }
operai-core = { workspace = true }
operai-abi = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
dirs = "6.0.0"
base64.workspace = true
prost-types.workspace = true

[lints]
workspace = true
