[package]
name = "operai-embedding"
version = "0.1.0"
description = "Embedding and config utilities for Operai"
edition.workspace = true
repository.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true }
fastembed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true }
