[package]
name = "operai-runtime"
version = "0.1.1"
description = "Operai gRPC server"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost"] # Used by tonic-build generated code

[lib]
name = "operai_runtime"
path = "src/lib.rs"

[features]
static-link = []
mcp = ["rmcp", "http"]

[lints]
workspace = true

[dependencies]
operai-abi = { workspace = true }
operai-core = { workspace = true }
futures = { workspace = true }
dirs = "5.0"

# Stable ABI
abi_stable = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }

# Encoding
base64 = { workspace = true }

# MCP
rmcp = { workspace = true, optional = true, features = [
    "server",
    "transport-streamable-http-server",
] }
http = { workspace = true, optional = true }

# Tracing
tracing = { workspace = true }
thiserror = { workspace = true }
[dev-dependencies]
anyhow = { workspace = true }
rmcp = { workspace = true, features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
axum = { workspace = true }
