[package]
name = "gitlab-ci"
version = "0.1.0"
description = "Brwse tool integration for gitlab-ci"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
abi_stable = { workspace = true }
operai = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
urlencoding = "2.1"

[dev-dependencies]
operai-abi = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
