[package]
name = "imap-smtp"
version = "0.1.0"
description = "Brwse tool integration for IMAP/SMTP email servers"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
abi_stable = { workspace = true }
operai = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
async-imap = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
] }
tokio-native-tls = "0.3"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-native-tls",
    "smtp-transport",
    "builder",
] }
mailparse = "0.16"

[dev-dependencies]
operai-abi = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
