[package]
name = "sharepoint"
version = "0.1.0"
description = "Brwse tool integration for Microsoft SharePoint"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
# abi_stable is required because its `export_root_module` proc macro generates
# code referencing `::abi_stable::` which requires an extern crate dependency.
abi_stable = { workspace = true }
anyhow = "1.0"
base64 = "0.22"
operai = { workspace = true }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
operai-abi = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
