[package]
name = "trello"
version = "0.1.0"
description = "Brwse tool integration for Trello"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
abi_stable = { workspace = true }
anyhow = "1.0"
operai = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
operai-abi = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
