[package]
name = "discord"
version = "0.1.0"
description = "Brwse tool integration for Discord"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
abi_stable = { workspace = true }
anyhow = { workspace = true }
operai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
base64 = "0.22"

[dev-dependencies]
operai-abi = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
